fixes finals region overlapping bottom regions

--- a/src/static/styles/bracket/_region.scss
+++ b/src/static/styles/bracket/_region.scss
@@ -110,6 +110,7 @@
 	.round6, .round7 { display: none; }
 
 	.finals {
+		height: 200px;
 		.round2, .round3, .round4, .round5 {display: none;}
 		.round6, .round7 {display: block;}
 		.round6 {
